--- a/Adventure.Physics.Swap.Settings.ReloadedII/App.xaml
+++ b/Adventure.Physics.Swap.Settings.ReloadedII/App.xaml
@@ -1,11 +1,14 @@
 ﻿<Application x:Class="Adventure.Physics.Swap.Settings.ReloadedII.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:Reloaded.WPF.Controls;assembly=Reloaded.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
+                <!-- This dictionary switches locations between design and runtime -->
+                <controls:DesignTimeResourceDictionary RunTimeSource="pack://siteoforigin:,,,/Theme/Default/Root.xaml" DesignTimeSource="pack://application:,,,/Reloaded.WPF.Theme.Default;component/Theme/Default/Root.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
